# ai-agents-portfolio

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  REVIEW.md  buildspec.yml  observability.py  passrole.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agent_specs/: retrieval.yml
agents/: base.py  manager.py  registry.py  tools.py
agents/guards/: __init__.py  pii_redactor.py  prompt_injection.py  relevance.py
app/: deps.py  main.py
app/routes/: __init__.py  explain.py  feedback.py  rag.py  score.py
app/services/: rag.py
cdk/: package-lock.json  package.json
cdk/cdk-py/: app.py  passrole.json  requirements.txt
cdk/cdk-py/cdk_py/: pipeline_stack.py
cdk/cdk-py/tests/unit/: test_cdk_py_stack.py
cdk/lib/: pipeline-stack.ts
configs/agents/: explainer.agent.yaml  investigator.agent.yaml  triage.agent.yaml
docker/: Dockerfile  nginx.conf  start.sh
evals/: scorer.py  tasks.yaml
schemas/: claim.json  explanation.json  investigation.json  triage_result.json
src/agents/: orchestration_agent.py  retrieval_agent.py  tooluse_agent.py
src/app/: api.py  app.py  cli.py
src/pipelines/: build_index.py  ingest_docs.py
src/tools/: embed.py  s3_client.py  vector_store.py  web_search.py
tests/: test_agents.py  test_guards.py  test_prompts_contract.py  test_runtime.py  test_schemas.py  test_vector_store.py
web/: app.js  index.html  styles.css
